[Quick Open] Fix UI bugs - Add gap between command and shortcut - Hide the overflow Command description
Before: https://imgur.com/a/dO3yQmV
After: https://imgur.com/a/C1KXJpW

Fixed: 1269669, 1270208
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3282824
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Nancy Li <nancyly@chromium.org>

--- a/front_end/ui/legacy/components/quick_open/filteredListWidget.css
+++ b/front_end/ui/legacy/components/quick_open/filteredListWidget.css
@@ -113,7 +113,7 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item .filtered-list-widget-title {
-  flex: auto;
+  flex: initial;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -194,7 +194,7 @@ devtools-text-prompt {
 }
 
 .filtered-list-widget-item.one-row .filtered-list-widget-title {
-  flex: none;
+  padding-right: 8px;
 }
 
 .filtered-list-widget-item.two-rows {
